--- a/.vscode/settings.json
+++ b/.vscode/settings.json
@@ -1,3 +1,7 @@
 {
-    "livePreview.defaultPreviewPath": "/oberlin/tharack/templates/tharack/about.html"
+    "livePreview.defaultPreviewPath": "/oberlin/tharack/templates/tharack/about.html",
+    "docwriter.progress.trackFunctions": true,
+    "docwriter.progress.trackMethods": true,
+    "docwriter.progress.trackClasses": true,
+    "docwriter.progress.trackTypes": true
 }
